# entdb

./: .gitignore  .gitmodules  LICENSE  README.md  biome.json  cli.py  db2static.py  download.sh  dump.py  eslint.config.mjs  init.sql  ipsw-db.py  main.py  next.config.ts  osx-db.py  pack.sh  package-lock.json  package.json  paths.txt  pnpm-lock.yaml  pyproject.toml  query.py  rootfs.py  tsconfig.json
.github/workflows/: build.yml
agent/: Makefile  README.md  visitor.c
collector/: .clang-format  .gitignore  CMakeLists.txt  Makefile
collector/src/: db.c  db.h  indexer.c  scan.c  scan.h  tool.m
collector/src/index/: db.c  db.h  ent.h  ent.m  index.c  json.h  json.m
collector/src/scan/: scan.c  scan.h
data/ipsw.me/: devices.sh  firmwares.py
data/mist/: mist.py
data/phoeninx.dev/: mac.ts
data/theapplewiki.com/: README.md  api.py  api.ts  grep.py  keys.py
entdb/: __init__.py  db.py  finder.py  magic.py  parser.py
indexer/: db.py  detect.py  entitlements.py  kv.py  schema.sql  visitor.py
ipsw/: aea.py  fs.py  ramdisk.sh  reader.py  theapplewiki.py
osx/: cpio.py  extract.py  hdiutil.py  mist.py  pkg.py  product.py  reader.py  unpack.py
rules/: iPhoneOS.txt  macOS.txt  macOS_faster.txt  macOS_slower.txt
src/app/: globals.css  layout.tsx  page.tsx
src/components/: autocomplete.tsx  breadcrumb-list.tsx  copy-button.tsx  diff-viewer.tsx  download-button.tsx  filesystem.tsx  footer.tsx  header-portal.tsx  keys.tsx  navtop.tsx  (+3 more)
web/: .gitignore  env.d.ts  next.config.ts  package-lock.json  package.json  tailwind.config.js  treebuilder.ts  tsconfig.json
(+39 files in other folders)
